[package]
name = "web-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.async-std]
version = "1.6"
features = ["attributes"]

[dependencies]
futures = "0.3"
#futures = { version = "0.3", default-features = false, features = ["thread-pool"] }